--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.9",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.2",
+    "@next/third-parties": "^16.0.10",
     "@tailwindcss/forms": "^0.5.10",
     "framer-motion": "^12.23.26",
     "next": "16.0.8",
