--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/third-parties": "^16.0.10",
     "@tailwindcss/forms": "^0.5.10",
     "framer-motion": "^12.23.26",
+    "lenis": "^1.3.16",
     "lucide-react": "^0.561.0",
     "next": "16.0.8",
     "nodemailer": "^7.0.11",
